//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.users.c.orgunit;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.c.orgunit";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/any.proto";
import "spine/net/internet_domain.proto";
import "spine/users/identifiers.proto";
import "spine/users/values.proto";

// Creates an organizational unit.
//
message CreateOrgUnit {
    option (events) = "OrgUnitCreated";
    option (rejections) = "OrgUnitsCanNotFormCycles";

    OrgUnitId id = 1;

    // A name of the orgunit to display on UI.
    string display_name = 2 [(required) = true];

    // An interent domain of the orgunit.
    net.InternetDomain domain = 3;

    // A parent entity in the organizational structure.
    OrganizationOrUnit parent_entity = 4 [(required) = true];

    // Attributes of the orgunit.
    map<string, google.protobuf.Any> attributes = 5;
}

// Moves an orgunit from one organization or orgunit to another.
//
message MoveOrgUnit {
    option (events) = "OrgUnitMoved";
    option (rejections) = "OrgUnitsCanNotFormCycles";

    OrgUnitId id = 1;

    // A new parent entity of the orgunit.
    OrganizationOrUnit new_parent_entity = 2 [(required) = true];
}

// Deletes an orgunit.
//
message DeleteOrgUnit {
    option (events) = "OrgUnitDeleted";

    OrgUnitId id = 1;
}

// Adds a new attribute to an orgunit.
//
// If an attribute with this name already exists it will be overwritten.
//
message AddOrgUnitAttribute {
    option (events) = "OrgUnitAttributeAdded";

    OrgUnitId id = 1;

    // An attribute name.
    string name = 2 [(required) = true];

    // An attribute value.
    google.protobuf.Any value = 3 [(required) = true];
}

// Removes an attribute from an orgunit.
//
message RemoveOrgUnitAttribute {
    option (events) = "OrgUnitAttributeRemoved";
    option (rejections) = "OrgUnitAttributeDoesNotExist";

    OrgUnitId id = 1;

    // A name of the attribute to remove.
    string name = 2 [(required) = true];
}

// Updates an orgunit attribute.
//
message UpdateOrgUnitAttribute {
    option (events) = "OrgUnitAttributeUpdated";
    option (rejections) = "OrgUnitAttributeDoesNotExist";

    OrgUnitId id = 1;

    // An attribute name.
    string name = 2 [(required) = true];

    // A new attribute value.
    google.protobuf.Any new_value = 3 [(required) = true];
}

// Renames an orgunit.
//
message RenameOrgUnit {
    option (events) = "OrgUnitRenamed";

    OrgUnitId id = 1;

    // A new name of the orgunit.
    string new_name = 2 [(required) = true];
}

// Changes an orgunit domain.
//
message ChangeOrgUnitDomain {
    option (events) = "OrgUnitDomainChanged";

    OrgUnitId id = 1;

    // A new domain of the orgunit.
    net.InternetDomain new_domain = 2 [(required) = true];
}
